--- a/style.css
+++ b/style.css
@@ -65,7 +65,14 @@ textarea{
   color: white;
 }
 
-.saveBtn i:hover {
-  font-size: 20px;
-  transition: all .3s ease-in-out;
+.hover {
+  background-color: orange;
+}
+
+.save-icon {
+  height: 20px;
+  width: 20px;
+  position: absolute;
+  top: 40%;
+  left: 40%;
 }
